--- a/client/styles.css
+++ b/client/styles.css
@@ -1,8 +1,10 @@
 body {
   background-color: lightSteelBlue;
   font-family: 'Josefin Sans', sans-serif;
+  font-size: 16px;
 }
 
 h1, h2, h3 {
   font-family: 'Pacifico', cursive;
+  padding-bottom: 2%;
 }
