--- a/client/app/tweets.component.html
+++ b/client/app/tweets.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-sm-3">Name: {{tweet.user.name}}</div>
     <div class="col-sm-3">Location: {{tweet.user.location}}</div>
-    <div class="col-sm-3">Time: {{tweet.created_at}}</div>
+    <div class="col-sm-3">Time: {{tweet.created_at | twitterDateWithTime}}</div>
     <div class="col-sm-2">Followers: {{tweet.user.followers_count}}</div>
   </div>
     <div class="row">
